# api/docs/swagger.json
@@ -140,15 +140,6 @@
                     "Auth"
                 ],
                 "summary": "Get login url",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "redirect url after login success",
-                        "name": "redirect",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
